TP2-First Project

--- a/bundle/pom.xml
+++ b/bundle/pom.xml
@@ -85,7 +85,7 @@
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
-                        <Bundle-SymbolicName>com.mycompany.myproject.htl.htl-bundle</Bundle-SymbolicName>
+                        <Bundle-SymbolicName>com.aem.trainig.first-bundle</Bundle-SymbolicName>
                     </instructions>
                 </configuration>
             </plugin>
