TP6 - SlingModel AEM

--- a/bundle/pom.xml
+++ b/bundle/pom.xml
@@ -51,6 +51,12 @@
       <groupId>org.apache.sling</groupId>
       <artifactId>org.apache.sling.jcr.api</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.adobe.aem</groupId>
+      <artifactId>uber-jar</artifactId>
+      <classifier>obfuscated-apis</classifier>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
