--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,17 @@
                 <version>4.8.1</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>com.adobe.aem</groupId>
+                <artifactId>uber-jar</artifactId>
+                <version>6.1.0</version>
+                <!-- for AEM6.1 use this version     : <version>6.1.0</version> -->
+                <!-- for AEM6.1 SP1 use this version : <version>6.1.0-SP1-B0001</version> -->
+                <!-- for AEM6.1 SP2 use this version : <version>6.1.0-SP2</version> -->
+                <!-- for AEM6.2 use this version     : <version>6.2.0</version> -->
+                <classifier>obfuscated-apis</classifier>
+                <scope>provided</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
